--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
     "url": "https://github.com/FukKwang/portfolio/issues"
   },
   "homepage": "https://github.com/FukKwang/portfolio#readme",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.3.0",
+    "autoprefixer": "^9.6.1",
+    "cssnano": "^4.1.10",
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-postcss": "^8.0.0",
     "tailwindcss": "^1.1.2"
   }
 }
