--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
+    "gulp-imagemin": "^6.1.1",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
+    "imagemin-mozjpeg": "^8.0.0",
     "tailwindcss": "^1.1.2"
   }
 }
